@@ -19,6 +19,7 @@ git-annex (7.20190826) UNRELEASED; urgency=medium
   * info: When file matching options are specified when getting
     info of something other than a directory, they won't have any effect,
     so error out to avoid confusion.
+  * info: Display trust level when getting info on a uuid, same as on a remote.
   * When upgrading a direct mode repo to v7 with adjusted unlocked branches,
     fix a bug that prevented annex.thin from taking effect for the files
     in working tree.
